# qtt

./: .gitignore  CHANGELOG.md  README.md  qtt.cabal
src/: Context.hs  Extract.hs  Inductive.hs  Syntax.hs  TypeError.hs  Typecheck.hs  Unify.hs
src/Bound/: Context.hs
src/Syntax/: Pretty.hs
test/: Main.hs
test/Test/: Extract.hs  Pretty.hs  Typecheck.hs  Unify.hs  Utils.hs
