cabal-version:       2.4

name:                qtt
version:             0.1.0.0
license:             BSD-3-Clause
license-file:        LICENSE
author:              Isaac Elliott
maintainer:          isaace71295@gmail.com
category:            Language
extra-source-files:  CHANGELOG.md

library
  exposed-modules:     Bound.Context
                     , Context
                     , Syntax
                     , Syntax.Pretty
                     , Inductive
                     , TypeError
                     , Typecheck
                     , Unify
  build-depends:       base >=4.12 && <5
                     , ansi-wl-pprint
                     , bound
                     , comonad
                     , containers
                     , deriving-compat
                     , lens
                     , mtl
                     , semirings
                     , text >= 1.2
                     , these
                     , transformers >= 0.5
  ghc-options:         -Wall -Werror -Wredundant-constraints
  hs-source-dirs:      src
  default-language:    Haskell2010

test-suite qtt-tests
  type:                exitcode-stdio-1.0
  other-modules:       Test.Typecheck
                     , Test.Pretty
                     , Test.Unify
                     , Test.Utils
  build-depends:       base >=4.12 && <5
                     , qtt
                     , ansi-wl-pprint
                     , bound
                     , containers
                     , hspec
                     , transformers >= 0.5
  main-is:             Main.hs
  ghc-options:         -Wall -Werror
  hs-source-dirs:      test
  default-language:    Haskell2010